# codex

./: .tool-versions
server/: Dockerfile  pyproject.toml
server/src/: main.py
